# accolite

./: .gitignore  GPL.HEADER  README  README.markdown  TODO.markdown
files/: CMakeExamplesLists.cmake  ExamplesLinks.cmake  FindCppUnit.cmake  PathsDefinitions.cmake  TestsLinks.cmake
scripts/: accolite  accolite-bash-completion  accolite-clean  accolite-cmds  accolite-compile  accolite-init  accolite-install-dir  accolite-root  accolite-test  accolite-update  accolite.py  accolite_bash_completion
scripts/AccoliteFiles/: CMakeLists.txt  CMakeTestsLists.cmake  CTestDashboard.cmake  ExampleTest.cpp  TestRunner.h
scripts/AccoliteFiles/c/: CMakeExamplesLists.cmake  CMakeLists.txt  CMakeTestsLists.cmake  CTestDashboard.cmake  Dependencies.cmake  FindValgrind.cmake  TestsLinks.cmake  example_test.c  test_runner.h
scripts/AccoliteFiles/cpp/: CMakeExamplesLists.cmake  CMakeLists.txt  CTestConfig.cmake  CTestDashboard.cmake  ExampleTest.cpp  FindPkgMacros.cmake  PathsDefinitions.cmake  TestRunner.h  valgrind.supp
src/: accolite  accolite-bash-completion  accolite-clean  accolite-cmds  accolite-compile  accolite-init  accolite-install-dir  accolite-postclean  accolite-postcompile  accolite-posttest  accolite-preclean  accolite-precompile  accolite-pretest  accolite-root  accolite-test  accolite-update  accolite.py  accolite_bash_completion  levenshtein.py
src/AccoliteFiles/c/: CMakeTestsLists.cmake  CTestConfig.cmake  ExamplesLinks.cmake  FindPkgMacros.cmake  PathsDefinitions.cmake  test_runner.h  valgrind.supp
src/AccoliteFiles/c/proprietary/cmake/: CMakeExamplesLists.cmake  CMakeLists.txt  CMakeTestsLists.cmake  CTestConfig.cmake  CTestDashboard.cmake  PathsDefinitions.cmake
src/AccoliteFiles/c/proprietary/cmake/Modules/: FindCUnit.cmake  FindGcov.cmake  FindPkgMacros.cmake  FindValgrind.cmake
src/AccoliteFiles/c/proprietary/tests/: test_runner.h
src/AccoliteFiles/c/user/cmake/: Dependencies.cmake  ExamplesLinks.cmake  TestsLinks.cmake  postclean.py  postcompile  postcompile.py  posttest  posttest.py  preclean.py  precompile  precompile.py  pretest  pretest.py  valgrind.supp
src/AccoliteFiles/c/user/cmake/PrePostScripts/: postclean.py  postcompile.py  posttest.py  preclean.py  precompile.py  pretest.py
src/AccoliteFiles/cpp/: CMakeTestsLists.cmake  Dependencies.cmake  FindValgrind.cmake  TestRunner.h
src/AccoliteFiles/cpp/proprietary/cmake/: CMakeExamplesLists.cmake  CMakeLists.txt  CMakeTestsLists.cmake  CTestDashboard.cmake  PathsDefinitions.cmake
src/AccoliteFiles/cpp/proprietary/cmake/Modules/: FindGcov.cmake
